@@ -1,3 +1,9 @@
+2011-01-03  Leonardo Martins  <leonardo@cose.fee.unicamp.br>
+
+	* @io/private/hco_.m ([DPAT]): Alteração do formato dos dados.
+	
+	* @problema/verificar.m: Adicionada verificação da duração dos patamares.
+	
 2010-12-29  Leonardo Martins  <leonardo@cose.fee.unicamp.br>
 
 	* @problema/private/calcular_JP.m: Corrigido cálculo da Jacobiana.
